# multipass-structural-memory-eval

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
baselines/: jp_realm_v0_1_daemon_20260426.json  jp_realm_v0_1_familiar_20260426.json  jp_realm_v0_1_familiar_20260426_v2.json  jp_realm_v0_1_familiar_20260426_v3.json  jp_realm_v0_1_familiar_20260426_v4_punct_fix.json  jp_realm_v0_1_familiar_v0.3.9_reflect_cumulative.json  jp_realm_v0_1_familiar_v0.3_candidate_window.json  jp_realm_v0_1_familiar_v0.3_reflect.json  jp_realm_v0_1_familiar_v0.3_task1_bm25.json  jp_realm_v0_1_rlm_llama70b_20260426.json  jp_realm_v0_1_rlm_qwen7b_20260426.json
commits/: 2026-05-25.md
docs/: cat9a_design.md  ckg_benchmark_experiment.md  ckg_benchmark_findings.md  conveyor_corpus_design.md  corpus_spec_2026.md  critique_of_recent_push.md  critique_pass_2.md  critique_pass_3.md  cross_validation_2026.md  findings_personal_kg_pkm_retest.md  findings_personal_kg_rrf_fix.md  ideas.md  industry_benchmark_gap_analysis_2026.md  industry_benchmark_plan_v2.md  industry_standards_integration.md  ingestigation.md  ladybug-graph-sins.md  sme_spec_v8.md  three_layer_model_implementation_note.md
docs/gists/: origin-how-multipass-began.md  why-and-how.md  why-benchmarks-cant-see-the-bug.md
docs/issue-drafts/: 2026-05-10-ckg-format-issue-reply.md
docs/issue-drafts/2026-05-05-content-engine-feedback/: 01-cat4-edge-counts-per-collision.md  02-cat5-isolate-breakdown-by-type.md  03-cat4c-weight-per-edge-type-components.md  04-cat5-representative-cycles-for-betti1.md  05-cat5-per-component-shape-summary.md  README.md
docs/issue-drafts/2026-05-30-ontoclean-shacl-brokerage/: 01-cat5-burt-brokerage-metric.md  02-cat8-ontoclean-deepening.md  03-shacl-validationreport-output.md  04-cat8-external-standard-fit-and-audit.md  README.md
docs/proposals/: relation_composition_algebra.md
docs/related_work/: graph-benchmark.md  kg-construction-integrity.md  locomo-and-memorybench.md  longmemeval.md  mcp-bench-and-mcpagentbench.md
docs/superpowers/plans/: 2026-04-25-mempalace-daemon-adapter.md  2026-04-26-familiar-adapter.md
docs/superpowers/specs/: 2026-04-25-mempalace-daemon-adapter-design.md  2026-04-26-familiar-adapter-design.md
results/ckg_benchmark/: _diagnostics.md  _index.md
results/ckg_benchmark/calculus/: cat2c_report.json  condition_A.json  condition_B.json  condition_B2.json  condition_C.json  diagnostics.json  runs.jsonl  summary.md  summary_llm_judge.md
results/ckg_benchmark/glp1-obesity/: cat2c_report.json  condition_A.json  condition_B.json  condition_B2.json  condition_C.json  diagnostics.json  runs.jsonl  summary.md  summary_llm_judge.md
results/ckg_benchmark/moss/: cat2c_report.json  condition_A.json  condition_B.json  condition_B2.json  condition_C.json  diagnostics.json  runs.jsonl  summary.md  summary_llm_judge.md
results/ckg_benchmark/theory-of-knowledge/: cat2c_report.json  condition_A.json  condition_B.json  condition_B2.json  condition_C.json  diagnostics.json  runs.jsonl  summary.md  summary_llm_judge.md
results/ckg_benchmark/us-geography/: cat2c_report.json  condition_A.json  condition_B.json  condition_B2.json  condition_C.json  diagnostics.json  runs.jsonl  summary.md  summary_llm_judge.md
scripts/: cross_validate_longmemeval.py  download_ckg_data.py  judge_ckg.py  run_ckg_diagnostics.py  run_ckg_experiment.py  validate_brokerage_vs_cat2c.py  validate_brokerage_vs_ckg.py
sme/: __init__.py  cli.py
sme/adapters/: __init__.py  _graph_mapping.py  base.py  ckg.py  familiar.py  flat_baseline.py  ladybugdb.py  mempalace.py  mempalace_daemon.py  oracle_retrieval.py  random_retrieval.py  rlm_adapter.py
sme/categories/: __init__.py  _bcubed.py  counterfactual.py  external_fit.py  gap_detection.py  harness_integration.py  ingestion_integrity.py  latency.py  multi_hop.py  ontology_coherence.py
sme/claims/: ontoclean_tags_good_dog.yaml  standard_ontologies.yaml  standard_ontologies_webstd.yaml  structural_claims.yaml
sme/conditions/: __init__.py  full_context.py  karpathy_compiled.py  wiki_compiler.py
sme/corpora/: implied_ontology_mempalace.yaml  locomo_loader.py
sme/corpora/good-dog-corpus/: ONTOLOGY.md  README.md  ontology.yaml  questions.yaml  questions_new.yaml  validate.py  verify.py
sme/corpora/jp_realm_v0_1/: questions.yaml
sme/corpora/longmemeval/: .gitignore  README.md  __init__.py  loader.py
sme/corpora/mari-kg-v0_1/: questions.yaml
sme/corpora/standard_v0_1/: AUTHORING.md  (+1 more)
sme/eval/: __init__.py  answer_relevancy.py  deterministic_overlays.py  faithfulness.py  judge_base.py  judge_cache.py  llm_clients.py  longmemeval_judge.py  niah.py  pricing.py  pricing_2026_05.yaml
sme/harness/: __init__.py  runner.py  wrapper.py
sme/stats/: __init__.py  bootstrap.py  fdr.py
sme/topology/: __init__.py  analyzer.py  fixtures.py
tests/: conftest.py  test_adapter_contract.py  test_adapter_harness_manifest_contract.py  test_answer_relevancy.py  test_answer_relevancy_calibration.py  test_bcubed.py  test_brokerage.py  test_cat8_counterfactual.py  test_cat8_external_fit.py  test_cat8_external_fit_webstd.py  test_cat8_shacl_conformance.py  test_cat9a_anthropic_runner.py  test_cat9a_invocation.py  test_cat9a_ollama_runner.py  test_ckg_adapter.py  test_cli_adapter_forwarding.py  test_cross_validate_longmemeval.py  test_deterministic_overlays.py  test_faithfulness.py  test_faithfulness_calibration.py  test_familiar_adapter.py  test_familiar_live.py  test_full_context_adapter.py  test_gap_detection.py  test_graph_mapping.py  test_harness_integration.py  test_harness_timing.py  test_ingestion_integrity.py  test_ingestion_integrity_bcubed.py  test_judge_base.py  test_judge_cache.py  test_karpathy_compiled_adapter.py  test_latency.py  test_llm_clients.py  test_load_adapter.py  test_locomo_loader.py  test_longmemeval_judge.py  test_longmemeval_judge_replicates.py  test_longmemeval_loader.py  test_mempalace_adapter.py  (+13 more)
tests/fixtures/: tiny_questions.yaml
tools/good-dog-graph-pipeline/: README.md  good-dog-ontology-build.yaml
(+84 files in other folders)
