[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sme-eval"
version = "0.0.1"
description = "Structural Memory Evaluation: a benchmark framework that tests what a memory system knows about its own structure"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ben West" },
]
keywords = ["knowledge-graph", "rag", "memory", "benchmark", "topology", "evaluation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
topology = [
    "ripser>=0.6",
    # NOTE: community detection uses networkx's native
    # `louvain_communities` (nx>=3.2, already a core dep), NOT the
    # `python-louvain`/`community` package. Do not re-add python-louvain:
    # `community.best_partition` has different default resolution and
    # tie-breaking, so a reviewer running it would get different
    # communities than the modularity numbers SME reports.
]
viz = [
    "matplotlib>=3.8",
    "pyvis>=0.3",
]
# The LadybugDB Python binding. The distribution was published as
# `real_ladybug` (e.g. 0.15.3, the version this adapter is tested
# against) and renamed `ladybug` in the 2026-04-25 source build. The
# adapter imports `ladybug` first and falls back to `real_ladybug`, so
# either resolves at runtime. We pin the legacy name here because it is
# the one verified installable; switch to `ladybug` once that name is
# the canonical published distribution.
ladybugdb = [
    "real_ladybug",
]
neo4j = [
    "neo4j>=5.0",
]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.40",
]
# [all] keeps the *infra* extras only — topology, viz, graph-db
# bindings. LLM-provider SDKs (anthropic, openai) stay opt-in: most
# users running SME against their own graph never need them, and
# they pull in a non-trivial dependency tree. Install explicitly via
# `pip install sme-eval[anthropic,openai]` when you need them.
all = [
    "sme-eval[topology,viz,ladybugdb,neo4j]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    # test-only: the Cat 8f SHACL ValidationReport conformance test
    # parses the emitted report through a real JSON-LD/RDF reader. NOT a
    # runtime dep — SME never projects to RDF or runs a SHACL engine.
    "rdflib>=7.0",
]

[project.scripts]
sme-eval = "sme.cli:main"

[project.urls]
Repository = "https://github.com/M0nkeyFl0wer/multipass-structural-memory-eval"
Issues = "https://github.com/M0nkeyFl0wer/multipass-structural-memory-eval/issues"

[tool.setuptools.packages.find]
include = ["sme*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"
